--- a/hugo.toml
+++ b/hugo.toml
@@ -2,4 +2,6 @@ baseURL = "https://kirklingtonhowgrave.org/" # Update to your Netlify URL or cus
 languageCode = "en-us"
 title = "Kirklington & Sutton Howgrave"
 theme = "ananke"
-
+[services]
+  [services.googleAnalytics]
+    googleAnalytics = "G-H88K87FTSQ"
